add proper video support for talks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css?version={{ version }}"/>
     <link rel="stylesheet" type="text/css" href="/bower_components/magic/magic.min.css?version={{ version }}"/>
     <link rel="stylesheet" type="text/css" href="/bower_components/tinseltown.js/tinseltown.min.css?version={{ version }}"/>
+    <link rel="stylesheet" type="text/css" href="/css/video-js.min.css?version={{ version }}">
     <link rel="stylesheet" type="text/css" href="/css/main.css?version={{ version }}"/>
     <link rel="shortcut icon" href="/favicon.ico?version={{ version }}"/>
   </head>
@@ -31,6 +32,7 @@
     <script src="/bower_components/typed.js/lib/typed.js?version={{ version }}"></script>
     <script src="/bower_components/novacancy.js/javascript/jquery.novacancy.js?version={{ version }}"></script>
     <script src="/bower_components/tinseltown.js/tinseltown.min.js?version={{ version }}"></script>
+    <script src="/js/video.min.js?version={{ version }}"></script>
     <script src="/js/main.js?version={{ version }}"></script>
   </body>
 </html>
