--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ button {
   height:     100vh;
   min-height: 100vh;
   max-height: 100vh;
-  background-image:     url(/img/bg-0.png);
+  background-image:     url(/img/bg-0.jpg);
   background-repeat:    no-repeat;
   background-size:      cover;
   background-position:  center;
