--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="{{ site.data.content.my_subtitle }}">
+    <meta name="keywords" content="software,development,haskell,yesod,static,types">
+    <meta name="author" content="Ilja Tkachuk">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap.css?version={{ version }}"/>
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstra.386/v3.3.2/dist/css/bootstrap-theme.css?version={{ version }}"/>
