--- a/_layouts/official.html
+++ b/_layouts/official.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   {% assign version = site.time | date_to_xmlschema | cgi_escape %}
   <head>
     <meta charset="utf-8">
