better official CV PDF generator

--- a/_layouts/official.html
+++ b/_layouts/official.html
@@ -19,8 +19,8 @@
     <div> {{ content }} </div>
 
     <script src="/bower_components/jquery/dist/jquery.js?version={{ version }}"></script>
-    <script src="/bower_components/html2pdf.js/dist/html2pdf.bundle.min.js?version={{ version }}"></script>
     <script src="/bower_components/jquery-modal/jquery.modal.min.js?version={{ version }}"></script>
+    <script src="/js/jspdf.min.js?version={{ version }}"></script>
     <script src="/js/official.js?version={{ version }}"></script>
   </body>
 </html>
